syntax = "proto3";

package api;

option go_package = "internal/pb/parking_lot;parking_lot";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

service ParkingAPI {
  rpc GetParkingLot (GetParkingLotRequest) returns (GetParkingLotResponse) {
    option (google.api.http) = {
      get: "/parking/get"
    };
  };

  rpc GetParkingLotsByUserID (GetParkingLotsByUserIDRequest) returns (GetParkingLotsByUserIDResponse) {
    option (google.api.http) = {
      get: "/parking/get_by_user_id"
    };
  };

  rpc ListParkingLots (ListParkingLotsRequest) returns (ListParkingLotsResponse) {
    option (google.api.http) = {
      get: "/parking/list"
    };
  };
  rpc AddParkingBooking (AddParkingBookingRequest) returns (AddParkingBookingResponse) {
    option (google.api.http) = {
      post: "/booking/add"
      body: "*"
    };
  }

  rpc GetParkingBooking (GetParkingBookingRequest) returns (GetParkingBookingResponse) {
    option (google.api.http) = {
      get: "/booking/get"
    };
  }

  rpc GetParkingBookingsList (GetParkingBookingsListRequest) returns (GetParkingBookingsListResponse) {
    option (google.api.http) = {
      get: "/booking/list"
    };
  }

  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/sso/register"
      body: "*"
    };
  };

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/sso/login"
      body: "*"
    };
  };

  // IsAdmin checks whether a user is an admin.
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse) {
    option (google.api.http) = {
      get: "/sso/get/user"
    };
  };

}

message GetUserByIDRequest {
  string user_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetUserByIDResponse {
  User user = 1;
}

message RegisterRequest {
  // Номер телефона
  string phone_number = 1;
  // Пароль
  string password = 2;
}

message RegisterResponse {
  // ID пользователя в формате UUID
  string user_id = 1;
}

message LoginRequest {
  // Номер телефона
  string phone_number = 1;
  // Пароль
  string password = 2;
}

message LoginResponse {
  // Авторизационный токен
  string token = 1;
  // ID пользователя в виде UUID
  string userID = 2;
}

message IsAdminRequest {
  // ID пользователя в формате UUID
  string user_id = 1;
}

message IsAdminResponse {
  bool is_admin = 1;
}


message GetParkingLotRequest {
  int64 number = 1;
}

message GetParkingLotResponse {
  ParkingLot parking_lot = 1;
}

message GetParkingLotsByUserIDRequest {
  string user_id = 1;
}

message GetParkingLotsByUserIDResponse {
  repeated ParkingLot parking_lot = 1;
}

message ListParkingLotsRequest {}

message ListParkingLotsResponse {
  repeated ParkingLot parking_lot = 1;
  int64 total = 2;
}

message ParkingLot {
  int64 number = 1;
  // Тип парковочного места: для инвалидов, спец. назначения и др.
  ParkingType type = 2;
  // Статус парковочного места (забронировано, доступно)
  ParkingLotStatus status = 3;
  // Машина на парковочном месте
  optional Vehicle vehicle = 4;
  // Владелец парковочного места
  optional string owner_id = 5;
}

enum ParkingLotStatus {
  UNDEFINED_PARKING_LOT_STATUS = 0;
  AVAILABLE_PARKING_LOT_STATUS = 1;
  BOOKED_PARKING_LOT_STATUS = 2;
  BOOKED_BY_ME_PARKING_LOT_STATUS = 3;
}

enum ParkingType {
  // Неизвестный тип парковочного места
  UNDEFINED_PARKING_TYPE = 0;
  // Тип постоянного парковочного места
  PERMANENT_PARKING_TYPE = 1;
  // Тип временного парковочного места
  RENT_PARKING_TYPE = 2;
  // Тип парковочного места для спец. назначения (скорая, пожарные и т.д.)
  SPECIAL_PARKING_TYPE = 3;
  // Тип парковочного места для инвалидов
  INCLUSIVE_PARKING_TYPE = 4;
  // etc
}

message User {
  // UUID
  string id = 1;
  // Имя
  optional string name = 2;
  // Фамилия
  optional string surname = 3;
  // Отчество
  optional string patronymic = 4;
  string phone_number = 5;
  optional string address = 6;
  // Тип пользователя
  UserType user_type = 7;
}

enum UserType {
  // Неизвестный
  UNDEFINED_USER_TYPE = 0;
  // Обычный пользователь (Владелец+Арендатор)
  REGULAR_USER_TYPE = 1;
  // Управляющая компания
  MANAGING_COMPANY_USER_TYPE = 2;
  // Администратор
  ADMINISTRATOR_USER_TYPE = 3;
}

message Vehicle {
  // UUID
  string id = 1;
  // Гос. номер машины
  string number = 2;
  // ID владельца машины
  string user_id = 3;
}

message ParkingBooking {
  string user_id = 1;
  int64 parking_lot = 2;
  string vehicle = 3  [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp time_from = 4  [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp time_to = 5  [(google.api.field_behavior) = REQUIRED];
}

message AddParkingBookingRequest {
  ParkingBooking booking = 1 [(google.api.field_behavior) = REQUIRED];
}

message AddParkingBookingResponse {
  int64 parking_lot = 1;
}

message GetParkingBookingRequest {
  int64 parking_lot = 1;
}

message GetParkingBookingResponse {
  ParkingBooking booking = 1;
}

message GetParkingBookingsListRequest {
  Filter filter = 1;
  int64 limit = 2; // opt
  int64 offset = 3; // opt
}

message Filter {
  string owner_id = 1 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp time_from = 2 ;
  google.protobuf.Timestamp time_to = 3;
  repeated string vehicles = 4;
}

message GetParkingBookingsListResponse {
  repeated ParkingBooking bookings = 1;
  int64 total = 2;
}

message Rental {
  string rental_id = 1;
  int64 parking_lot = 2;
  google.protobuf.Timestamp time_from = 4  [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp time_to = 5  [(google.api.field_behavior) = REQUIRED];
  int64 cost_per_hour = 6;
  int64 cost_per_day = 7;
}





